# ChangeLog for dev-lisp/cl-sql
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-sql/ChangeLog,v 1.12 2004/06/24 23:55:14 agriffis Exp $

*cl-sql-2.10.14 (09 May 2004)

  09 May 2004; <mkennedy@gentoo.org> +cl-sql-2.10.14.ebuild:
  New upstream version.

  02 May 2004; David Holm <dholm@gentoo.org> cl-sql-2.10.5.ebuild:
  Added to ~ppc.

*cl-sql-2.10.5 (02 May 2004)

  02 May 2004; <mkennedy@gentoo.org>
  +files/2.10.5-no-shared-object-asdf-gentoo.patch, +cl-sql-2.10.5.ebuild:
  New upstream version.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> cl-sql-2.8.2.ebuild,
  cl-sql-2.9.2.ebuild:
  Add inherit eutils

*cl-sql-2.9.2 (23 Apr 2004)

  23 Apr 2004; <mkennedy@gentoo.org>
  +files/2.9.2-no-shared-object-asdf-gentoo.patch, +cl-sql-2.9.2.ebuild:
  New upstream version

*cl-sql-2.8.2 (21 Apr 2004)

  21 Apr 2004; <mkennedy@gentoo.org>
  +files/2.8.2-no-shared-object-asdf-gentoo.patch, +cl-sql-2.8.2.ebuild:
  New upstream version

*cl-sql-1.8.8 (12 Feb 2004)

  12 Feb 2004; <mkennedy@gentoo.org> cl-sql-1.8.8.ebuild, metadata.xml,
  files/1.8.8-no-shared-object-asdf-gentoo.patch:
  Cleanup for eclass changes.

*cl-sql-1.8.7 (27 Jan 2004)

  27 Jan 2004; <mkennedy@gentoo.org> cl-sql-1.8.7.ebuild,
  files/1.8.7-no-shared-object-asdf-gentoo.patch:
  New upstream; Refactored ebuild; Don't build share-objects with ASDF

  17 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-sql-1.7.6.ebuild,
  metadata.xml:
  debian, preinst, postrm

*cl-sql-1.7.6 (06 Oct 2003)

  06 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> cl-sql-1.7.6.ebuild:
  new upstream and added support for mysql

*cl-sql-1.6.4 (07 Jul 2003)

  07 Jul 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  initial import