@@ -1,24 +1,24 @@
-MD5 a4bcc57a52c57438247d9e9ddc5d8153 cl-sql-2.9.2.ebuild 3918
-MD5 11e621e4efd05263dd2d371b8e122b90 cl-sql-1.8.8.ebuild 3053
+MD5 f704349f3c81bde494263d295aa5a873 ChangeLog 1926
 MD5 2c23ce14fe64f6be72b1a7d5b078b61e cl-sql-1.6.4.ebuild 2381
-MD5 823a456764da4771779180aa9e8671f1 cl-sql-1.8.7.ebuild 3668
-MD5 e67bd5d621160c007d8325c35a5a814c cl-sql-2.10.5.ebuild 3924
-MD5 29cc7fdc1a67379c726aae909a7b61ce cl-sql-2.8.2.ebuild 3928
-MD5 404c061833cc96159e55bbc4debaffed ChangeLog 1773
 MD5 27b6dc1d9c7c5e710e29951719100c9e cl-sql-1.7.6.ebuild 3176
+MD5 823a456764da4771779180aa9e8671f1 cl-sql-1.8.7.ebuild 3668
+MD5 11e621e4efd05263dd2d371b8e122b90 cl-sql-1.8.8.ebuild 3053
+MD5 2bb9ad882378d8f569ad89a99784d58f cl-sql-2.10.14.ebuild 3924
+MD5 2aaf2af49864d4be670a32e4ae948470 cl-sql-2.10.5.ebuild 3923
+MD5 559ec7feefe34f24369272bb9e3c2f4e cl-sql-2.8.2.ebuild 3927
+MD5 8ed3a6cf32246d87ccd8f02fb30bb50a cl-sql-2.9.2.ebuild 3917
 MD5 25a7993f47b4e9b1261a9956a8d61d90 metadata.xml 431
-MD5 eb5486433c229a3097cf5a73b6102325 cl-sql-2.10.14.ebuild 3925
-MD5 cf167b3a8dd1c837984ef0012fb2e04e files/digest-cl-sql-2.10.5 64
+MD5 c085e2590aaf031dbf0d529f01aa9404 files/1.8.7-no-shared-object-asdf-gentoo.patch 1386
+MD5 c085e2590aaf031dbf0d529f01aa9404 files/1.8.8-no-shared-object-asdf-gentoo.patch 1386
+MD5 63fc4e1cb5deb413818b19b07c8d07d2 files/2.10.14-no-shared-object-asdf-gentoo.patch 1364
 MD5 39c139fd746874b09e436b26cfdf0956 files/2.10.5-no-shared-object-asdf-gentoo.patch 1354
-MD5 c2d0f38c439f62aaa1532c43c2d5874f files/digest-cl-sql-2.10.14 65
+MD5 b95933d3fefd8c8037aca4cb3b2a3b12 files/2.8.2-no-shared-object-asdf-gentoo.patch 1376
+MD5 e5ca571bd2c75d3878fc5c87b3a48185 files/2.9.2-no-shared-object-asdf-gentoo.patch 1344
 MD5 a6466e9446f1925d56f3da03cde724ac files/digest-cl-sql-1.6.4 63
 MD5 f1d552471358205bfd6e93fea6094ae1 files/digest-cl-sql-1.7.6 134
 MD5 c3ca6ba1399bc5ec660033d6695ee667 files/digest-cl-sql-1.8.7 134
 MD5 d597ac23163a77e95913eb578f472834 files/digest-cl-sql-1.8.8 63
+MD5 c2d0f38c439f62aaa1532c43c2d5874f files/digest-cl-sql-2.10.14 65
+MD5 cf167b3a8dd1c837984ef0012fb2e04e files/digest-cl-sql-2.10.5 64
 MD5 de2b9641b677108d8e00952e4a7a2624 files/digest-cl-sql-2.8.2 63
 MD5 1ea803d4c29dc20fafdd2450b1cefff8 files/digest-cl-sql-2.9.2 63
-MD5 63fc4e1cb5deb413818b19b07c8d07d2 files/2.10.14-no-shared-object-asdf-gentoo.patch 1364
-MD5 c085e2590aaf031dbf0d529f01aa9404 files/1.8.7-no-shared-object-asdf-gentoo.patch 1386
-MD5 e5ca571bd2c75d3878fc5c87b3a48185 files/2.9.2-no-shared-object-asdf-gentoo.patch 1344
-MD5 c085e2590aaf031dbf0d529f01aa9404 files/1.8.8-no-shared-object-asdf-gentoo.patch 1386
-MD5 b95933d3fefd8c8037aca4cb3b2a3b12 files/2.8.2-no-shared-object-asdf-gentoo.patch 1376
