@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/cl-sql
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-sql/ChangeLog,v 1.12 2004/06/24 23:55:14 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-sql/ChangeLog,v 1.13 2004/08/05 23:26:47 arj Exp $
+
+  05 Aug 2004; Anders Rune Jensen <arj@gentoo.org> cl-sqlite-2.8.2,
+  cl-sqlite-2.9.2, cl-sqlite-2.10.5, cl-sqlite-2.10.14:
+  Depend on version 2 of sqlite.
 
 *cl-sql-2.10.14 (09 May 2004)
 
